[gd_scene load_steps=6 format=3 uid="uid://7oj6ud1nk3rk"]

[ext_resource type="Script" uid="uid://d4ed4822gecuu" path="res://assets/scripts/home.gd" id="1_h8of0"]
[ext_resource type="Texture2D" uid="uid://cycbaldij7m2h" path="res://assets/textures/object/sheet_house.png" id="2_uquae"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_gbcpf"]
size = Vector2(19, 18.5)

[sub_resource type="LabelSettings" id="LabelSettings_kcbir"]
font_size = 1000

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ivqhn"]
size = Vector2(10, 6)

[node name="Home" type="StaticBody2D"]
z_as_relative = false
y_sort_enabled = true
scale = Vector2(2, 2)
script = ExtResource("1_h8of0")

[node name="DisplayPush" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="DisplayPush"]
position = Vector2(0, -1.75)
shape = SubResource("RectangleShape2D_gbcpf")
debug_color = Color(0.859738, 0.000682302, 0.876333, 0.42)

[node name="OpenInfo" type="Label" parent="DisplayPush"]
visible = false
modulate = Color(0.498039, 1, 1, 1)
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -15.5
offset_top = -18.5
offset_right = 7541.5
offset_bottom = 1343.5
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.005, 0.005)
text = "press E to enter"
label_settings = SubResource("LabelSettings_kcbir")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_ivqhn")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(0, -0.5)
scale = Vector2(2, 2)
texture = ExtResource("2_uquae")
region_enabled = true
region_rect = Rect2(34, 9, 8, 8)

[connection signal="body_entered" from="DisplayPush" to="." method="_on_display_push_body_entered"]
[connection signal="body_exited" from="DisplayPush" to="." method="_on_display_push_body_exited"]
